# vector_pageindex_rag_eval

./: .env.example  .gitignore  DOC.md  RAGS.md  README.md  build_indexes.py  pyproject.toml  run_experiment.py
configs/: default.yaml
results/: visualization.html
results/20260503T074309Z/: results.jsonl  summary.csv
results/20260503T135737Z/: results.jsonl  summary.csv
results/20260505T141732Z/: results.jsonl  summary.csv
scripts/: build_indexes.sh  run_experiment.sh
src/rag_eval/: __init__.py  answer.py  build_cli.py  cli.py  config.py  data.py  json_utils.py  llm.py  metrics.py  pageindex_rag.py  rlm_rag.py  runner.py  text_splitters.py  types.py  vector_config.py  vector_rag.py  visualization.py
src/rag_eval/official_pageindex/: __init__.py  loader.py  rag.py
tests/: test_build_cli.py  test_data_loader.py  test_metrics.py  test_official_pageindex_rag.py  test_pageindex_rag.py  test_rlm_rag.py  test_runner.py  test_text_splitters.py  test_vector_rag_cache.py
