[project]
name = "vector-pageindex-rag-eval"
version = "0.1.0"
description = "Evaluate vector RAG and PageIndex-style RAG on LegalBench-RAG."
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.51.0",
  "numpy>=1.26.0",
  "pyyaml>=6.0.0",
  "sentence-transformers>=3.0.0",
  "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_eval"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
